src/objects/ints__EfxReport_Score__c.object
<CustomObject>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport Scores</relationshipLabel>
        <relationshipName>EfxReport_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__ModelId__c</fullName>
        <label>ModelId</label>
        <length>2</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__ScoreIndicator__c</fullName>
        <label>ScoreIndicator</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__ScoreNumber__c</fullName>
        <label>ScoreNumber</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Value__c</fullName>
        <label>Value</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__VersionNumber__c</fullName>
        <label>VersionNumber</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__description__c</fullName>
        <description>Contains the description regarding product type.</description>
        <label>description</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__productId__c</fullName>
        <label>productId</label>
        <length>10</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__productType__c</fullName>
        <label>productType</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Score</label>
    <nameField>
        <displayFormat>EFX-SCORE-{0000000000}</displayFormat>
        <label>EfxReport Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>